AP-22-HTTP-leere-response (#7)
### Updated
HTTPServer response wird anders gelesen
### fix
HTTPServer response wird als byte gesendet

Co-authored-by: Sebastian Schindler <sebastian@schindlertai.de>